--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <h2>Menu</h2>
                 <ul class="links">
                     <li><a href="index.html">Home</a></li>
+			<li><a href="finalists.html">Award-winning works</a></li>
                     <li><a href="rules.html">Rules and Procedures</a></li>
-
                     <li><a href="submission.html">Submission Guidelines</a></li>
                     <li><a href="reference.html">Case References</a></li>
                     <li><a href="jury.html">Jury and Organization</a></li>
@@ -76,7 +76,24 @@
                                 <p style="font-size:17px">
                                     As a response to such an emerging trend in the industry, the School of Communication and the Department of Journalism at the Hong Kong Baptist University are going to organize a University-wide data-driven storytelling competition. It aims to facilitate
                                     the interdisciplinary teaching, learning, and discussion on data-driven reporting, as well as to identify exemplary projects using emerging technologies. </p>
-                    </div>
+                    <h2 class="major">This year we have:</h2>
+                            <div style="padding-left: 7%;padding-right:2%">
+                                <p style="font-size:20px">
+                                    <font size="10px"> 9</font> Jury members
+                                    <br/>
+                                    <font size="10px"> 50 </font> participants U-wide
+                                    <br/>
+                                    <font size="10px"> 14 </font> submissions in total &nbsp--&nbsp 3 videos + 6 webs + 5 written stories
+                                    <br/>
+                                    <font size="10px"> 1</font> winner +
+                                    <font size="10px"> 3</font> honorable mentions</div>
+                            </p>
+                            <div style="padding-left:8%">
+                                <a href="finalists.html" class="button special" style="padding-left:8px;padding-right:8px"> View the Award-winning works</a>
+                            </div>
+                            <br/>
+			
+			</div>
                 </div>
             </section>
 
@@ -220,6 +237,9 @@
                             <div class="content2">
                                 <h2><u>31 March</u></h2>
                                 <p>Result Announced</p>
+				    <div>
+                                    <a href="finalists.html" class="button special">Award-winning works</a>
+                                </div>
                             </div>
                         </div>
                     </div>
