--- a/jury.html
+++ b/jury.html
@@ -31,8 +31,8 @@
                 <h2>Menu</h2>
                 <ul class="links">
                     <li><a href="index.html">Home</a></li>
+	            <li><a href="finalists.html">Award-winning works</a></li>
                     <li><a href="rules.html">Rules and Procedures</a></li>
-
                     <li><a href="submission.html">Submission Guidelines</a></li>
                     <li><a href="reference.html">Case References</a></li>
                     <li><a href="jury.html">Jury and Organization</a></li>
