--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <p style="font-size:17px">
                                     As a response to such an emerging trend in the industry, the School of Communication and the Department of Journalism at the Hong Kong Baptist University are going to organize a University-wide data-driven storytelling competition. It aims to facilitate
                                     the interdisciplinary teaching, learning, and discussion on data-driven reporting, as well as to identify exemplary projects using emerging technologies. </p>
-                    <h2 class="major">This year we have:</h2>
+                    <br/><h2 class="major">This year we have:</h2>
                             <div style="padding-left: 7%;padding-right:2%">
                                 <p style="font-size:20px">
                                     <font size="10px"> 9</font> Jury members
