--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <h2>"Data is Beautiful"</h2>
                 <p style="font-size:25px">
 			<b>HKBU Data-driven Storytelling Competition 2018</b>
-		    <br/> 22 March - 25 March
+		    <br/> 22 March - 25 March, 2018
 		    </p>
-		    <a href="https://goo.gl/forms/lPcQlMbklI04ytgg1" class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
+		    
             </div>
         </section>
 
@@ -180,7 +180,7 @@
                                 </h2>
                                 <p>Participants registration deadline
                                 </p>
-                                <a href="https://goo.gl/forms/lPcQlMbklI04ytgg1" class="button special" style="padding-left:1em; padding-right:1em">Apply Now</a>
+                                
                             </div>
                         </div>
                         <div class="container left">
@@ -238,7 +238,7 @@
                                 <h2><u>31 March</u></h2>
                                 <p>Result Announced</p>
 				    <div>
-                                    <a href="finalists.html" class="button special">Award-winning works</a>
+                                    <a href="finalists.html" class="button special"> View the Award-winning works</a>
                                 </div>
                             </div>
                         </div>
