--- a/finalists.html
+++ b/finalists.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>2018 HKBU DDJ Competition Award-winning works</title>
+    <title>2018 HKBU DDJ Competition <br/>Award-winning works</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
