--- a/finalists.html
+++ b/finalists.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>2018 HKBU DDJ Competition <br/>Award-winning works</title>
+    <title>2018 HKBU DDJ Competition Award-winning works</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -52,7 +52,7 @@
         <section id="wrapper">
             <header>
                 <div class="inner">
-                    <h2> 2018 HKBU DDJ Competition Award-winning works</h2>
+                    <h2> 2018 HKBU DDJ Competition <br/>Award-winning works</h2>
                     <!-- <p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p> -->
                 </div>
             </header>
