--- a/finalists.html
+++ b/finalists.html
@@ -135,10 +135,11 @@
                                 </p>
                             </div>
                             <br/>
-                            <a href="index.html" class="button" style="padding-left:1em; padding-right:1em">Back to Main</a>
-
-
+                           
                         </div>
+                    </div>
+                    <div style="padding-left:1%">
+                        <a href="index.html" class="button special" style="padding-left:3em; padding-right:3em">Back to Main</a>
                     </div>
                 </div>
 
